--- a/package.json
+++ b/package.json
@@ -1,36 +1,2 @@
-{
-  "name": "wedding-management-frontend",
-  "version": "1.0.0",
-  "description": "Beautiful wedding management platform frontend with Next.js",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "^15.0.0",
-    "framer-motion": "^11.0.0",
-    "react-hook-form": "^7.48.0",
-    "zod": "^3.22.0",
-    "@hookform/resolvers": "^3.3.0",
-    "axios": "^1.6.0",
-    "lucide-react": "^0.263.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.2.0"
-  },
-  "devDependencies": {
-    "typescript": "^5.3.0",
-    "@types/node": "^20.10.0",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
-    "tailwindcss": "^3.4.0",
-    "postcss": "^8.4.32",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^15.0.0"
-  }
-}
+{"name":"wedding-management-frontend","version":"1.0.0","description":"Beautiful wedding management platform frontend with Next.js","private":true,"scripts":{"dev":"next dev","build":"next build","start":"next start","lint":"next lint"},"dependencies":{"react":"^19.0.0","react-dom":"^19.0.0","next":"^15.0.0"},"devDependencies":{"typescript":"^5.3.0","@types/node":"^20.10.0","@types/react":"^19.0.0","@types/react-dom":"^19.0.0","tailwindcss":"^3.4.0","postcss":"^8.4.32","autoprefixer":"^10.4.16","eslint":"^8.56.0","eslint-config-next":"^15.0.0"}}
+          
